2004-02-10	blytkerchan
	* TODO: update

	* IniHash,cc: use libreplace in stead of libswing
	* IniHash.h: don't expect libhash to be there
	* Makefile.am: compile IniHash into libcontain
	add testcases
	* test5.cc: trivial fix

	* configure.in: bump the patchlevel number and put alpha where it belongs
	* Makefile.am: re-organize
	* config.log: remove from CVS
	* list.c: minor bugfix
	* queue.h: ditto

	* NEWS: add words on the prev. version.

	* list.c: new file
	* list.h: ditto

2004-02-04	blytkerchan
	* config-libhash: remove

2004-02-03	blytkerchan
	* Makefile.am: update
	* configure.in: ditto
	* NocaseStringHash.cc: use libreplace in stead of swing for strlwr replacement
	* config.h.in: remove (generated)
	* config-libcontain.in: rename from config-libhash.in

2004-02-02	blytkerchan
	* TODO: update

2003-11-16	blytkerchan
	* queue.c: new file
	* queue.h: ditto

2003-10-28	blytkerchan
	* stack.c: rewrite
	* stack.h: ditto

2003-10-22	blytkerchan
	* stack.c: new file
	* stack.h: ditto

2003-10-09	blytkerchan
	* TODO: update

2003-10-07	blytkerchan
	* Hash.cc: added/replaced copyright notice
	* Hash.h: ditto
	* IniHash.cc: ditto
	* IniHash.h: ditto
	* IntHash.cc: ditto
	* IntHash.h: ditto
	* NocaseStringHash.cc: ditto
	* NocaseStringHash.h: ditto
	* StringHash.cc: ditto
	* StringHash.h: ditto
	* c_interface.cc: ditto
	* hash.h: ditto
	* test1.cc: ditto
	* test2.cc: ditto
	* test3.cc: ditto
	* test4.cc: ditto
	* test5.cc: ditto

2003-10-05	blytkerhan
	* AUTHORS: update to Jail's standards
	* COPYING: removed
	* INSTALL: ditto
	* NEWS: update

2003-06-22 (4)	Ronald Landheer-Cieslak	<ronald@landheer.com>
	* Makefile.am []: libhash_la_LDFLAGS new variable
	[AM_CFLAGS]; add call to config-swing
	[AM_CXXFLAGS]: ditto
	[bin_SCRIPTS]: new variable
	<test6$(EXEEXT)>: new target
	* configure.in: set CFLAGS and LDFLAGS before checking for Swing functions
	create config-libhash script

2003-06-22 (3)	Ronald Landheer-Cieslak	<ronald@landheer.com>