@@ -1,4 +1,10 @@
 2004-02-10	blytkerchan
+	* Hash.7.pod: update
+	* Makefile.am [AM_CFLAGS]: include top_srcdir in -I option
+	[AM_CXXFLAGS]: ditto
+	[test6_SOURCES]: use test6.c
+	[test6_LDADD]: link with -lstdc++
+
 	* TODO: update
 
 	* IniHash,cc: use libreplace in stead of libswing
